# photo_ops

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  eslint.config.mjs  iahmueausrhhqmuccp94utipr0vo0olm  manifest  mqlat3htkpfonvtgmkdvngpdc6aea6hq  obrnkaofupfpdu0hqduu8sjqcjapqgbr.darc  package.json  pnpm-lock.yaml  project_description.md  r5ruhodscirohimfnhnaq7gmn1fdqms2.darc
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
apps/cluster-service/: CLAUDE.md  Dockerfile  go.mod  pyproject.toml
apps/cluster-service/cmd/server/: main.go
apps/cluster-service/migrations/: 0001_create_cluster_tables.sql
apps/cluster-service/src/cluster_service/: __init__.py  codec.py  config.py  errors.py  fingerprint.py  ids.py  mapper.py  metering.py  model.py  photo_client.py  pipeline.py  ports.py  server.py  server_main.py  store.py  store_postgres.py  tree.py  worker.py  worker_main.py
apps/cluster-service/src/cluster_service/messaging/: __init__.py  in_memory.py  rabbitmq.py
apps/cluster-service/src/cluster_service/methods/: __init__.py  base.py  time_only.py
apps/cluster-service/src/photoops_proto/cluster/v1/: cluster_service_pb2.py  cluster_service_pb2.pyi  cluster_service_pb2_grpc.py  process_pb2.py  process_pb2.pyi
apps/cluster-service/src/photoops_proto/common/v1/: common_pb2.py  common_pb2.pyi
apps/cluster-service/src/photoops_proto/photo/v1/: photo_service_pb2.py  photo_service_pb2.pyi  photo_service_pb2_grpc.py  processing_pb2.py  processing_pb2.pyi
apps/cluster-service/src/photoops_proto/usage/v1/: consumption_pb2.py  consumption_pb2.pyi
apps/cluster-service/tests/: conftest.py  test_codec.py  test_config_ids.py  test_mapper.py  test_messaging.py  test_metering.py  test_methods.py  test_pipeline.py  test_rabbitmq_reconnect.py  test_server.py  test_store.py  test_tree.py  test_worker.py
apps/media-worker/: CLAUDE.md  Dockerfile  pyproject.toml
apps/media-worker/src/: main.py
apps/media-worker/src/media_worker/: app.py  codec.py  config.py  errors.py  exif.py  geocode.py  handler.py  imaging.py  logging_setup.py  storage.py
apps/media-worker/src/media_worker/data/: NOTICE  admin1.tsv  cities15000.tsv  countries.tsv
apps/media-worker/src/media_worker/messaging/: in_memory.py  port.py  rabbitmq.py  retry.py
apps/media-worker/src/photoops_proto/photo/v1/: processing_pb2.py  processing_pb2.pyi
apps/media-worker/tests/: fakes.py  test_app.py  test_errors.py  test_exif.py  test_geocode.py  test_handler.py  test_imaging.py  test_in_memory_bus.py  test_logging_setup.py  test_smoke.py  test_storage.py
docs/: agent-ergonomics.md  agent-tooling-research.md  agent-workflow-evolution.md  architecture-frame-verification.md  architecture.md  claude-code-practices.md  demo-runbook.md  domain-model.md  e2e-auth-upload-ownership.md  e2e-geo-normalization.md  e2e-photo-clustering.md  e2e-structured-logging.md  e2e-usage-accounting.md  fortification-review.md  roadmap.md
proto/: CLAUDE.md  buf.gen.cluster-python.yaml  buf.gen.go.yaml  buf.gen.python.yaml  buf.gen.yaml  buf.yaml
scripts/: coverage-diff  lint-changed  sdd  seed-demo.sh  smoke-auth-upload-ownership.sh  smoke-cluster.sh  smoke-clusters.sh  smoke-coverage-gate.sh  smoke-coverage.sh  smoke-media-processing.sh  smoke-publication.sh  smoke-seed.sh  smoke-skeleton-gate.sh  smoke-stack.sh  smoke-test-guard.sh  smoke-ui.sh  smoke-upload.sh  smoke-usage.sh  test-guard  test-smoke-upload-contract.sh
sessions/: 001_architecture_frame.md  004_fortification_review.md  (+30 more)
(+317 files in other folders)
