[project]
name = "photoops-media-worker"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "pika>=1.3.2",
  "minio>=7.2.0",
  "Pillow>=11.0.0",
  "piexif>=1.1.3",
  "protobuf>=5.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0", "mypy>=1.14.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/photoops_proto"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
exclude = ["src/photoops_proto"]
# Runtime deps (pika, minio, piexif, ...) and the excluded generated proto
# stubs ship no type info; without this, `mypy src` breaks the moment Phase-2
# code imports them. Worker is small; a blanket ignore is the pragmatic guard.
ignore_missing_imports = true
# Tests import via `src.media_worker.*` (pythonpath = ["."]) while the package
# is also installed as `media_worker`; explicit_package_bases tells mypy to root
# module names at the working directory, resolving the duplicate-module error.
explicit_package_bases = true
